@@ -771,8 +771,9 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
         <listitem>
           <para>Added in Shorewall 4.4.7. When set to Yes, restricts the set
           of modules loaded by shorewall to those listed in
-          /var/lib/shorewall/helpers. When not set, or set to the empty value,
-          LOAD_HELPERS_ONLY=No is assumed. </para>
+          /var/lib/shorewall/helpers and those that are actually used. When
+          not set, or set to the empty value, LOAD_HELPERS_ONLY=No is
+          assumed.</para>
         </listitem>
       </varlistentry>
 
