@@ -677,8 +677,9 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
         <listitem>
           <para>Added in Shorewall 4.4.7. When set to Yes, restricts the set
           of modules loaded by shorewall to those listed in
-          /var/lib/shorewall6/helpers. When not set, or set to the empty
-          value, LOAD_HELPERS_ONLY=No is assumed.</para>
+          /var/lib/shorewall6/helpers and those that are actually used. When
+          not set, or set to the empty value, LOAD_HELPERS_ONLY=No is
+          assumed.</para>
         </listitem>
       </varlistentry>
 
