@@ -10,6 +10,8 @@ Changes in Shorewall 4.4.7
 
 5)  Implement LOAD_HELPERS_ONLY
 
+6)  Avoid excessive module loading with LOAD_HELPERS_ONLY=Yes
+
 Changes in Shorewall 4.4.6
 
 1)  Fix for rp_filter and kernel 2.6.31.
